Button alignment update (middle button's position not fixed yet)

--- a/style/style.css
+++ b/style/style.css
@@ -100,8 +100,17 @@ body{
     width:100%;
     height: 100%;
 }
-.buttons{
-    display:inline-block;
+#button1{
+    float:left;
     height:100%;
-    width: 33%; /*a gombok között 8px rést kellene kihagyni*/
+    width:33%;
+}
+#button2{
+    height:100%;
+    width:33%;
+}
+#button3{
+    float:right;
+    height:100%;
+    width:33%;
 }
